# collapsedetect

./: .buildinfo  .gitignore  README.md  README.zh-cn.md  core.html  detector.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: core.doctree  detector.doctree  environment.pickle  index.doctree
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
docs/source/: conf.py  core.rst  detector.rst
src/collapsedetect/: __init__.py  detector.py
tests/: conftest.py  test_alg.py  test_det.py
