[tool.poetry]
name = "collapsedetect"
version = "0.1.0"
description = "Detect model collapse for PyTorch module"
authors = ["JamzumSum <zzzzss990315@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
torch = "^1.11.0"
tensorboard = {version = "^2.9.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.poetry.extras]
tb = [
    "tensorboard"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
