[tool.poetry]
name = "collapsedetect"
version = "0.1.2"
description = "Detect model collapse for PyTorch module"
authors = ["JamzumSum <zzzzss990315@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JamzumSum/collapsedetect"
documentation = "https://jamzumsum.github.io/collapsedetect"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.2.0"
tensorboard = {version = ">=1.15.0", optional = true}
Sphinx = {version = "^4.5.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.18.1", optional = true}
pydata-sphinx-theme = {version = "^0.8.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[tool.poetry.extras]
tb = [
    "tensorboard"
]
doc = [
    "Sphinx",
    "sphinx-autodoc-typehints",
    "pydata-sphinx-theme"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
